--- a/index.css
+++ b/index.css
@@ -1069,11 +1069,12 @@ body, html {
 
 
 .MainPage{
-    width: 90%;
+    width: 100%;
     height: 85vh;
-    margin-top: 4vh;
-    border-radius: 7px;
-    border: 3px solid black;
+    /* margin-top: 4vh; */
+    /* border-radius: 7px; */
+    /* border: 3px solid black; */
+    border: none;
     background-color: #ffffff;
     color: #333;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -1081,7 +1082,6 @@ body, html {
     /* overflow: hidden; */
     position: relative;
 }
-
 
 
 
