--- a/index.css
+++ b/index.css
@@ -46,7 +46,7 @@ header{
     border: 1px solid rgb(215, 75, 75);
     background-color: #ffcccb;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    font-size: 1vw;
+/*     font-size: 1vw; */
 }
 
 .Title{
