--- a/index.css
+++ b/index.css
@@ -1029,6 +1029,7 @@ body, html {
     /* display: inline-block; */
     /* border: 1px solid black; */
     max-width: 30%;
+    font-size: 4vw;
 
 }
 
