--- a/index.css
+++ b/index.css
@@ -349,11 +349,10 @@ a{
     border: 1px solid #ccc;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     width: 15vw;
-    height: 8vh;
+    height: 9vh;
     /* border: 1px solid black; */
     padding: 5%;
     display: flex;
-    font-size: 3vw;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -1017,6 +1016,15 @@ body, html {
     align-items: center;
 }
 
+.skills-c{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    width: 100%;
+    height: 90%;
+    /* gap: 20px; */
+    
+   }
+
 .s-left{
     max-height: 20vh;
     display: flex;
@@ -1031,7 +1039,16 @@ body, html {
     max-width: 30%;
     font-size: 4vw;
 
+
+
 }
+
+.s-right{
+    width: 100%;
+    height: 100%;
+    /* border: 1px solid black; */
+}
+
 
 
 
@@ -1059,11 +1076,7 @@ body, html {
 
 
 
-.s-right{
-    width: 100%;
-    height: 100%;
-    /* border: 1px solid black; */
-}
+
 
 
 
